--- a/02-html-css/layout/css/style.css
+++ b/02-html-css/layout/css/style.css
@@ -1,14 +1,47 @@
+@import url(https://fonts.googleapis.com/css?family=Arvo:400,400italic,700italic,700);
+
+body {
+  background-color: #444;
+}
+
+header {
+  color: white;
+}
+
+a {
+  color: #888;
+}
+
 .container {
   max-width: 960px;
-  margin: auto;
+  margin: 0 auto;
 }
 
 article {
+  font-family: 'Arvo', serif;
   display: inline-block;
-  width: 80%;
+  width: 77%;
+  background-color: white;
+  padding: 1em;
+  border-radius: 1em;
+  border-top-right-radius: 0;
 }
 
 aside {
   display: inline-block;
   width: 19%;
+  vertical-align: top;
+  background-color: white;
+  border-radius: 1em;
+  border-top-left-radius: 0;
+  border-bottom-left-radius: 0;
 }
+
+
+
+
+
+
+
+
+
