--- a/02-html-css/positioning/css/style.css
+++ b/02-html-css/positioning/css/style.css
@@ -10,3 +10,76 @@
   text-align: center;
   line-height: 100px; /* Vertical centering, set height same as container height */
 }
+
+.box:hover {
+  background-color: #cccccc;
+}
+
+.smallbox {
+  border: 1px solid pink;
+  width: 50px;
+  height: 50px;
+  position: absolute;
+}
+
+.abs1 {
+  top: 10%;
+  left: 10%;
+  background-color: red;
+}
+
+.relative:hover .abs1 {
+  z-index: 9999999;
+}
+
+.abs2 {
+  top: 20%;
+  left: 20%;
+  background-color: orange;
+}
+
+.abs3 {
+  top: 30%;
+  left: 30%;
+  background-color: yellow;
+
+}
+
+.abs4 {
+  top: 40%;
+  left: 40%;
+  background-color: green;
+}
+
+.relative {
+  position: relative;
+  width: 400px;
+  height: 400px;
+}
+
+.absolute {
+  position: absolute;
+  bottom: 20px;
+  right: 20px;
+}
+
+.fixed {
+  position: fixed;
+  top: 20px;
+  right: 20px;
+}
+
+.newsbox {
+  display: inline-block;
+  border: 1px solid black;
+  width: 300px;
+  height: 300px;
+  padding: 1em;
+  overflow: auto;
+}
+
+.newsbox img {
+  float: right;
+}
+
+
