--- a/06-sinatra/calc/views/calc.erb
+++ b/06-sinatra/calc/views/calc.erb
@@ -1,1 +1,6 @@
-The result is: <%= @result %>
+<p>The first number is <%= @x %></p>
+<p>The second number is <%= @y %></p>
+
+<p>The operation is: <%= params[:operator] %></p>
+
+The result is: <strong><%= @result %></strong>
