--- a/06-sinatra/calc/views/home.erb
+++ b/06-sinatra/calc/views/home.erb
@@ -1,5 +1,11 @@
 <h1>Welcome To Calc</h1>
 
-<h2>Under construction</h2>
+<form action="/calc">
 
-<img src="http://essentialparents.info/images/underconstruction.gif" alt="">
+  <input type="number" name="first" placeholder="First number">
+  <input type="text" name="operator" placeholder="Operator: + or - or * or /">
+  <input type="number" name="second" placeholder="Second number">
+  
+  <button>Calculate</button>
+
+</form>
