--- a/07-databases/butterflies/views/butterflies_index.erb
+++ b/07-databases/butterflies/views/butterflies_index.erb
@@ -3,9 +3,7 @@
 <ul>
   <% @butterflies.each do |bfly| %>
     <li>
-      <a href="/butterflies/<%= bfly['id'] %>">
-        <%= bfly['name'] %>
-      </a>
+      <a href="/butterflies/<%= bfly['id'] %>"><%= bfly['name'] %></a>
     </li>
   <% end %>
 </ul>
