--- a/07-databases/butterflies/views/butterflies_show.erb
+++ b/07-databases/butterflies/views/butterflies_show.erb
@@ -2,7 +2,7 @@
 <h3>Family: <%= @butterfly['family'] %></h3>
 
 <% unless @butterfly['image'].nil? %>
-  <img src="<%= @butterfly['image'] %>">
+  <img src="<%= @butterfly['image'] %>" class="feature">
 <% end %>
 
 <p>
