--- a/07-databases/butterflies/views/butterflies_edit.erb
+++ b/07-databases/butterflies/views/butterflies_edit.erb
@@ -1,3 +1,4 @@
+<h2>Edit Butterfly</h2>
 <form action="/butterflies/<%= @butterfly['id'] %>" method="post">
   <label for="">Name:</label>
   <input type="text" name="name" value="<%= @butterfly['name'] %>">
