--- a/07-databases/butterflies/views/butterflies_new.erb
+++ b/07-databases/butterflies/views/butterflies_new.erb
@@ -1,3 +1,4 @@
+<h2>New Butterfly</h2>
 <form action="/butterflies" method="post">
   <label for="">Name:</label>
   <input type="text" name="name">
