--- a/07-databases/butterflies/views/layout.erb
+++ b/07-databases/butterflies/views/layout.erb
@@ -3,8 +3,14 @@
 <head>
   <meta charset="UTF-8">
   <title>Butterflies</title>
+  <link rel="stylesheet" href="/css/style.css">
 </head>
 <body>
+
+  <nav>
+    <a href="/butterflies">All Butterflies</a>
+    <a href="/butterflies/new">New Butterfly</a>
+  </nav>
 
   <div class="container">
     <%= yield %>
