--- a/07-databases/butterflies_ar/views/butterflies_new.erb
+++ b/07-databases/butterflies_ar/views/butterflies_new.erb
@@ -1,7 +1,7 @@
 <h2>New Butterfly</h2>
 <form action="/butterflies" method="post">
   <label for="">Name:</label>
-  <input type="text" name="name">
+  <input type="text" name="name" required>
   <label for="">Family:</label>
   <input type="text" name="family">
   <label for="">Image:</label>
