--- a/07-databases/butterflies_ar/views/plants_show.erb
+++ b/07-databases/butterflies_ar/views/plants_show.erb
@@ -3,3 +3,8 @@
 <% unless @plant['image'].nil? %>
   <img src="<%= @plant['image'] %>" class="feature">
 <% end %>
+
+<p>
+  <a href="/plants/<%= @plant['id'] %>/delete">Delete</a>
+  <a href="/plants/<%= @plant['id'] %>/edit">Edit</a>
+</p>
