--- a/07-databases/butterflies_ar/views/butterflies_new.erb
+++ b/07-databases/butterflies_ar/views/butterflies_new.erb
@@ -7,5 +7,13 @@
   <label for="">Image:</label>
   <input type="url" name="image">
 
+  <label for="">Plant:</label>
+  <select name="plant_id">
+    <option></option>
+    <% Plant.all.each do |plant| %>
+      <option value="<%= plant['id'] %>"><%= plant['name'] %></option>
+    <% end %>
+  </select>
+
   <button>Create butterfly</button>
 </form>
