--- a/07-databases/butterflies_ar/views/butterflies_show.erb
+++ b/07-databases/butterflies_ar/views/butterflies_show.erb
@@ -1,6 +1,14 @@
 <h2><%= @butterfly['name'] %></h2>
 <h3>Family: <%= @butterfly['family'] %></h3>
 
+<% unless @butterfly.plant.nil? %>
+  <h3>Larval Plant:
+    <a href="/plants/<%= @butterfly.plant.id %>">
+      <%= @butterfly.plant.name %>
+    </a>
+  </h3>
+<% end %>
+
 <% unless @butterfly['image'].nil? %>
   <img src="<%= @butterfly['image'] %>" class="feature">
 <% end %>
