--- a/07-databases/butterflies_ar/views/layout.erb
+++ b/07-databases/butterflies_ar/views/layout.erb
@@ -8,8 +8,10 @@
 <body>
 
   <nav>
-    <a href="/butterflies">All Butterflies</a>
-    <a href="/butterflies/new">New Butterfly</a>
+    <a href="/butterflies">All Butterflies</a> |
+    <a href="/butterflies/new">New Butterfly</a> |
+    <a href="/plants">All Plants</a> |
+    <a href="/plants/new">New Plant</a>
   </nav>
 
   <div class="container">
