--- a/07-databases/butterflies_ar/views/butterflies_edit.erb
+++ b/07-databases/butterflies_ar/views/butterflies_edit.erb
@@ -7,5 +7,13 @@
   <label for="">Image:</label>
   <input type="url" name="image" value="<%= @butterfly['image'] %>">
 
+  <label for="">Plant:</label>
+  <select name="plant_id">
+    <option></option>
+    <% Plant.all.each do |plant| %>
+      <option value="<%= plant['id'] %>" <%= 'selected' if @butterfly.plant_id == plant.id %> ><%= plant['name'] %></option>
+    <% end %>
+  </select>
+
   <button>Update butterfly</button>
 </form>
