--- a/08-rails/solarsystem/app/views/layouts/application.html.erb
+++ b/08-rails/solarsystem/app/views/layouts/application.html.erb
@@ -8,6 +8,11 @@
 </head>
 <body>
 
+<nav>
+  <a href="/planets">All Planets</a>
+  <a href="/planets/new">New Planet</a>
+</nav>
+
 <%= yield %>
 
 </body>
