--- a/08-rails/moma/app/views/layouts/application.html.erb
+++ b/08-rails/moma/app/views/layouts/application.html.erb
@@ -8,6 +8,13 @@
 </head>
 <body>
 
+<nav>
+  <%= link_to('All Artists', artists_path) %> |
+  <%= link_to('New Artist', new_artist_path) %> ||
+  <%= link_to('All Works', works_path) %> |
+  <%= link_to('New Work', new_work_path) %>
+</nav>
+
 <%= yield %>
 
 </body>
