--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -10,8 +10,17 @@
 
 <nav>
   <%= link_to('Home', root_path) %>
-  <%= link_to('Sign Up', new_user_path) %>
+  <% if @current_user.present? %>
+    <%= link_to("Logout #{ @current_user.name }", login_path, :method => :delete) %>
+  <% else %>
+    <%= link_to('Sign Up', new_user_path) %>
+    <%= link_to('Sign In', login_path) %>
+  <% end %>
 </nav>
+
+<% if @current_user.present? %>
+  <h2>Welcome back <%= @current_user.try(:name) %></h2>
+<% end %>
 
 <%= yield %>
 
