--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -14,7 +14,7 @@
     <% if @current_user.admin? %>
       <%= link_to('Show users', users_path) %>
     <% end %>
-    <%= link_to("Edit Profile", edit_users_path) %>
+    <%= link_to("Edit Profile", users_edit_path) %>
     <%= link_to("Logout #{ @current_user.name }", login_path, :method => :delete) %>
   <% else %>
     <%= link_to('Sign Up', new_user_path) %>
