--- a/08-rails/tunr/app/views/session/new.haml
+++ b/08-rails/tunr/app/views/session/new.haml
@@ -1,3 +1,6 @@
+- if flash[:error].present?
+  %h2= flash[:error]
+
 = form_tag '/login' do
   = label_tag :email
   = text_field_tag :email, nil, :autofocus => true, :required => true
