--- a/08-rails/tunr/app/views/layouts/application.html.erb
+++ b/08-rails/tunr/app/views/layouts/application.html.erb
@@ -8,21 +8,77 @@
 </head>
 <body>
 
-<nav>
-  <%= link_to('Home', root_path) %>
-  <% if @current_user.present? %>
-    <% if @current_user.admin? %>
-      <%= link_to('Show users', users_path) %>
+  <!--nav>
+    <%= link_to('Home', root_path) %>
+    <% if @current_user.present? %>
+      <% if @current_user.admin? %>
+        <%= link_to('Show users', users_path) %>
+      <% end %>
+      <%= link_to("Edit Profile", users_edit_path) %>
+      <%= link_to("Logout #{ @current_user.name }", login_path, :method => :delete) %>
+    <% else %>
+      <%= link_to('Sign Up', new_user_path) %>
+      <%= link_to('Sign In', login_path) %>
     <% end %>
-    <%= link_to("Edit Profile", users_edit_path) %>
-    <%= link_to("Logout #{ @current_user.name }", login_path, :method => :delete) %>
-  <% else %>
-    <%= link_to('Sign Up', new_user_path) %>
-    <%= link_to('Sign In', login_path) %>
-  <% end %>
+  </nav-->
+
+<nav class="navbar navbar-default">
+  <div class="container-fluid">
+    <!-- Brand and toggle get grouped for better mobile display -->
+    <div class="navbar-header">
+      <button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false">
+        <span class="sr-only">Toggle navigation</span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+        <span class="icon-bar"></span>
+      </button>
+      <a class="navbar-brand" href="/">Tunr</a>
+    </div>
+
+    <!-- Collect the nav links, forms, and other content for toggling -->
+    <div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1">
+      <ul class="nav navbar-nav">
+        <li class="active"><a href="#">Link <span class="sr-only">(current)</span></a></li>
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">One more separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+<!--       <form class="navbar-form navbar-left" role="search">
+        <div class="form-group">
+          <input type="text" class="form-control" placeholder="Search">
+        </div>
+        <button type="submit" class="btn btn-default">Submit</button>
+      </form>
+ -->      <ul class="nav navbar-nav navbar-right">
+        <li><a href="#">Link</a></li>
+        <li class="dropdown">
+          <a href="#" class="dropdown-toggle" data-toggle="dropdown" role="button" aria-haspopup="true" aria-expanded="false">Dropdown <span class="caret"></span></a>
+          <ul class="dropdown-menu">
+            <li><a href="#">Action</a></li>
+            <li><a href="#">Another action</a></li>
+            <li><a href="#">Something else here</a></li>
+            <li role="separator" class="divider"></li>
+            <li><a href="#">Separated link</a></li>
+          </ul>
+        </li>
+      </ul>
+    </div><!-- /.navbar-collapse -->
+  </div><!-- /.container-fluid -->
 </nav>
 
-<%= yield %>
+<div class="container">
+  <%= yield %>
+</div>
 
 </body>
 </html>
