--- a/08-rails/tunr/app/views/session/new.haml
+++ b/08-rails/tunr/app/views/session/new.haml
@@ -1,9 +1,15 @@
-- if flash[:error].present?
-  %h2= flash[:error]
+%p.text-center
+  %img.img-circle(src = 'https://fillmurray.com/100/100')
+  %span.glyphicon.glyphicon-heart-empty
 
-= form_tag '/login' do
-  = label_tag :email
-  = text_field_tag :email, nil, :autofocus => true, :required => true
-  = label_tag :password
-  = password_field_tag :password, nil, :required => true
-  = submit_tag 'Login'
+- if flash[:error].present?
+  %p.bg-warning= flash[:error]
+
+= form_tag '/login', :class => 'form-inline' do
+  %div.form-group
+    = label_tag :email
+    = text_field_tag :email, nil, :autofocus => true, :required => true, :class => 'form-control'
+  %div.form-group
+    = label_tag :password
+    = password_field_tag :password, nil, :required => true, :class => 'form-control'
+  = submit_tag 'Login', :class => 'btn btn-primary'
