--- a/08-rails/tunr/app/views/users/new.haml
+++ b/08-rails/tunr/app/views/users/new.haml
@@ -4,12 +4,16 @@
       %li= msg
 
 = form_for @user do |f|
-  = f.label :name
-  = f.text_field :name, :required => true
-  = f.label :email
-  = f.email_field :email, :required => true
-  = f.label :password
-  = f.password_field :password, :required => true
-  = f.label :password_confirmation
-  = f.password_field :password_confirmation, :required => true
-  = f.submit
+  %div.form-group
+    = f.label :name
+    = f.text_field :name, :required => true, :class => 'form-control'
+  %div.form-group
+    = f.label :email
+    = f.email_field :email, :required => true, :class => 'form-control'
+  %div.form-group
+    = f.label :password
+    = f.password_field :password, :required => true, :class => 'form-control'
+  %div.form-group
+    = f.label :password_confirmation
+    = f.password_field :password_confirmation, :required => true, :class => 'form-control'
+  = f.submit :class => 'btn btn-primary'
