form submission triggered OMDB ajax

--- a/10-ajax/movies-iii/app/views/pages/search.html.erb
+++ b/10-ajax/movies-iii/app/views/pages/search.html.erb
@@ -1,5 +1,9 @@
 <h1>Movies III</h1>
 <h2>Army of Darkness</h2>
 
-<input type="search" placeholder="Jaws">
-<button id="get-info">Get Info</button>
+<form>
+  <input type="search" id="search" placeholder="Jaws">
+  <button id="get-info">Get Info</button>
+</form>
+
+<div id="results"></div>
