--- a/12-backbone/secrets-app/app/assets/stylesheets/secrets.scss
+++ b/12-backbone/secrets-app/app/assets/stylesheets/secrets.scss
@@ -1,3 +1,38 @@
-// Place all the styles related to the Secrets controller here.
-// They will automatically be included in application.css.
-// You can use Sass (SCSS) here: http://sass-lang.com/
+body {
+  background: hotpink;
+}
+
+div.container {
+  max-width: 800px;
+  width: 100%;
+  text-align: center;
+  margin: 0 auto;
+  background: white;
+  padding: 3em;
+}
+
+textarea {
+  width: 100%;
+  height: 100px;
+  border: 5px solid gainsboro;
+  outline: none;
+  box-shadow: -10px -10px 0 lightslategray;
+}
+
+button {
+  padding: 10px 20px;
+  background: palegoldenrod;
+  border: none;
+  outline: none;
+  box-shadow: 10px 10px 0 black;
+}
+
+ul {
+  padding: 0;
+  margin-top: 50px;
+  list-style-type: none;
+}
+
+li {
+  padding: 5px 0;
+}
