--- a/11-advanced/paintr/app/views/pages/index.html.erb
+++ b/11-advanced/paintr/app/views/pages/index.html.erb
@@ -1,5 +1,10 @@
 <h1>Paintr</h1>
 
+<button id="clear">Clear</button>
+
+<input type="url" placeholder="http://fillmurray.com/400/400">
+<button id="add_bg">Add background</button>
+
 <input type="color" id="color" placeholder="#fedead" value="#ffffff">
 <button id="add">Add</button>
 
